@@ -31,7 +31,7 @@ password =
 web_root =
 ssl = 0
 delay = 0
-wait_for = 5
+TimePerGiB = 1
 watch_dir =
 fork = auto
 delete_failed = 0
